# IBAE

./: .gitignore  AGENTS.md  README.md  __init__.py  analysis_session.py  analyzer_v8.py  analyzer_v9_qt.py  compare_profile_fit_modes.py  export_transverse_gaussian_fit.py  flux_reconstruction.py  gui_v9_qt.py  iterative_peel.py  legacy_line_maps.py  manual_replay_session.py  opening_angle_calculator_v8.py  opening_angle_calculator_v9_qt.py  pyproject.toml  pytest.ini  qt_gui_v9.py  ridgeline_analysis.py  ridgeline_refine_legacy.py  session_analysis.py  session_replay.py  trend_report_compare_qt.py
IBAE/: __init__.py
common/: __init__.py  image.py  numeric.py
contours/: __init__.py  iterative_peel.py  roi.py
data/: README.md
data/mojave_fits/: 0238+711.u.stacked.icc.fits
data/tests/: ngc1052_mojave_ridgeline_analysis.json
flux/: __init__.py  reconstruction.py
legacy/: __init__.py  fwhm_baseline.py  line_maps.py  ridgeline_extraction.py  ridgeline_refine.py
mojave_fits/: README.md  fits_viewer.py  mojave_opening_tool.py  mojave_opening_tool_qt.py  polar_opening_angle.py  polar_ridge_builder.py  pushkarev_ridge.py  ridge_builder.py
reports/: __init__.py  trends.py
ridgeline/: __init__.py  analysis.py
tests/: test_ngc1052_regression.py
